--- a/router.html
+++ b/router.html
@@ -3,28 +3,32 @@
 <head>
   <meta charset="UTF-8">
   <title>Redirecting...</title>
-  <script>
-    (function() {
-      const parts = window.location.pathname.split('/').filter(Boolean);
-      // Expected: ["rank", "2025", "Science", "student", "114143"]
+<script>
+(function() {
+  const parts = window.location.pathname.split('/').filter(Boolean);
+  // Expected: ["2025", "Science", "114143"] or ["2025", "Science", "school", "XYZ123"]
 
-      let query = '';
-      if (parts.length >= 2) {
-        query += '?year=' + encodeURIComponent(parts[1]);
-      }
-      if (parts.length >= 3) {
-        query += '&group=' + encodeURIComponent(parts[2]);
-      }
-      if (parts.length >= 4 && parts[3] === 'student' && parts[4]) {
-        query += '&roll=' + encodeURIComponent(parts[4]);
-      }
-      if (parts.length >= 4 && parts[3] === 'school' && parts[4]) {
-        query += '&school=' + encodeURIComponent(parts[4]);
-      }
+  let query = '';
 
-      window.location.replace('/rank/index.html' + query);
-    })();
-  </script>
+  if (parts[0]) {
+    query += '?year=' + encodeURIComponent(parts[0]);
+  }
+  if (parts[1]) {
+    query += '&group=' + encodeURIComponent(parts[1]);
+  }
+  if (parts[2] && parts[2] !== 'school') {
+    // Student roll
+    query += '&roll=' + encodeURIComponent(parts[2]);
+  }
+  if (parts[2] === 'school' && parts[3]) {
+    // School code
+    query += '&school=' + encodeURIComponent(parts[3]);
+  }
+
+  window.location.replace('/index.html' + query);
+})();
+</script>
+
 </head>
 <body>
   Redirecting...
