--- a/index.html
+++ b/index.html
@@ -275,8 +275,7 @@
 
 
         import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-app.js";
-        import { getDatabase, ref, runTransaction, set, onValue, get, update, remove } 
-  from "https://www.gstatic.com/firebasejs/10.12.0/firebase-database.js";
+        import { getDatabase, ref, runTransaction, set, onValue, get, update } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-database.js";
         const firebaseConfig = {
           apiKey: "AIzaSyBaKVrTWKeaUxa0EaiDBR8OGpGCAjxAcUA",
           authDomain: "boardrankctg.firebaseapp.com",
@@ -292,25 +291,6 @@
         const db = getDatabase(app);
 
 window.db = db; 
-// === Hidden students helpers ===
-window.__br_listenHidden = function(year, group, handler) {
-  try {
-    onValue(ref(db, 'hiddenStudents/' + year + '/' + group), (snap) => {
-      handler(snap.val() || {});
-    });
-  } catch (e) { console.error('listenHidden err', e); }
-};
-window.__br_hideStudent = function(year, group, rollNorm) {
-  try {
-    return set(ref(db, `hiddenStudents/${year}/${group}/${rollNorm}`), 1);
-  } catch (e) { return Promise.reject(e); }
-};
-window.__br_unhideStudent = function(year, group, rollNorm) {
-  try {
-    return remove(ref(db, `hiddenStudents/${year}/${group}/${rollNorm}`));
-  } catch (e) { return Promise.reject(e); }
-};
-
 
 // Total Visits — live (visible to everyone)
 (function(){
@@ -414,6 +394,7 @@ window.listenClickCount = function(roll, cb) {
       
         trackVisit();
         initAnnouncementsListener();
+initDisplaySettingsListener();
         checkAndEnforceBan();
         if (userId === ADMIN_ID) showAdminStats();
         function __deriveFingerprintFallback() {
@@ -528,6 +509,20 @@ window.listenClickCount = function(roll, cb) {
       }
     });
   }
+  function initDisplaySettingsListener() {
+  try {
+    const dRef = ref(db, 'displaySettings');
+    onValue(dRef, (snap) => {
+      window.__br_displaySettings = snap.val() || {};
+      if (typeof window.applyDisplaySettingsToDOM === 'function') {
+        window.applyDisplaySettingsToDOM();
+      }
+    });
+  } catch (e) {
+    console.error('Display settings listener failed', e);
+  }
+}
+
 
       </script>
       
