--- a/review.html
+++ b/review.html
@@ -1,98 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-
-  <title>Reviews — BoardRankCTG (Maintenance Mode)</title>
-  <meta name="description" content="The Reviews page is currently under maintenance. We're fixing some bugs!" />
-  <meta name="author" content="Hasnyne" />
-  <link rel="canonical" href="https://boradrankctg.github.io/rank/review.html" />
-
-  <!-- Open Graph -->
-  <meta property="og:title" content="Reviews — BoardRankCTG" />
-  <meta property="og:description" content="This page is temporarily unavailable as we fix some bugs." />
-  <meta property="og:type" content="website" />
-
-  <!-- Fonts + Icons -->
-  <link rel="preconnect" href="https://fonts.googleapis.com" />
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800;900&display=swap" rel="stylesheet" />
-  <link rel="stylesheet" href="styles.css" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" crossorigin="anonymous" />
-  <link href="https://cdn.jsdelivr.net/npm/remixicon@4.3.0/fonts/remixicon.css" rel="stylesheet" />
-
-  <link rel="icon" href="https://cdn.jsdelivr.net/npm/remixicon@4.3.0/icons/trophy-line.svg" type="image/svg+xml" />
-</head>
-<body>
-
-  <!-- Top App Nav -->
-  <nav class="app-nav" role="navigation">
-    <div class="nav-inner">
-      <a class="brand" href="index.html">🎓 BoardRankCTG</a>
-
-      <button class="nav-toggle" id="navToggle" aria-label="Toggle menu">
-        <i class="ri-menu-line"></i>
-      </button>
-
-      <ul class="nav-links" id="navLinks">
-        <li><a href="index.html"><i class="fas fa-house-chimney"></i> Home</a></li>
-        <li><a href="about.html"><i class="fas fa-user-tie"></i> About</a></li>
-        <li><a href="review.html" class="active"><i class="fas fa-star-half-stroke"></i> Reviews</a></li>
-        <li><a href="contactus.html"><i class="fas fa-envelope-open-text"></i> Contact</a></li>
-
-        <li><button id="helpBtn" class="linklike"><i class="fas fa-question-circle"></i> Help</button></li>
-        <li><button id="shareBtn" class="linklike"><i class="ri-share-line"></i> Share</button></li>
-        <li><a href="visitors.html" id="visitorsLink"><i class="fas fa-users"></i> Visitors</a></li>
-
-        <li class="divider"></li>
-        <li>
-          <label class="theme-switch" title="Toggle theme">
-            <input type="checkbox" id="themeToggle" />
-            <span class="slider" aria-hidden="true"></span>
-            <span class="label">Dark mode</span>
-          </label>
-        </li>
-      </ul>
-    </div>
-    <div class="nav-overlay" id="navOverlay"></div>
-  </nav>
-
-  <!-- Announcements -->
-  <div id="annBanner" class="ann-banner type-info" style="display:none;">
-    <div class="ann-inner">
-      <div class="ann-text" id="annText"></div>
-      <a id="annBtn" class="ann-btn" href="#" target="_blank" rel="noopener" style="display:none;">Learn more</a>
-    </div>
-  </div>
-
-  <main class="container" style="padding-top: 60px; text-align:center;">
-    <i class="ri-bug-line" style="font-size: 3rem; color: #e11d48;"></i>
-    <h1 style="margin-top: 10px;">We’re fixing a few bugs 🛠️</h1>
-    <p style="color: #555; font-size: 1.1rem; margin-top: 6px;">
-      The Reviews section is temporarily unavailable.<br>
-      Our team is squashing some issues to make everything smoother.<br>
-      Please check back soon!
-    </p>
-  </main>
-
-  <footer>
-    &copy; 2025 BoardRankCTG — Made by Hasnyne
-  </footer>
-
-  <!-- Ban overlay -->
-  <div id="banOverlay">
-    <div class="ban-card">
-      <h3>🚫 Access Restricted</h3>
-      <p id="banReason">Reason: —</p>
-      <p id="banUntil">Until: —</p>
-      <div id="banTimer" style="font-weight:800;margin-top:6px;"></div>
-      <p style="margin-top:12px;font-size:.9rem;">If you think this is a mistake, contact the admin.</p>
-    </div>
-  </div>
-
-  <!-- Site-wide script -->
-  <script src="script.js"></script>
-
-</body>
-</html>
+Original file line numberOriginal file lineDiff line numberDiff line change@@ -1,350 +1,98 @@  <!DOCTYPE html>  <html lang="en">  <head>    <meta charset="UTF-8" />    <meta name="viewport" content="width=device-width, initial-scale=1" />      <title>Reviews — BoardRankCTG (Unofficial)</title>    <meta name="description" content="Read and submit reviews for BoardRankCTG. Share your experience about SSC & HSC rankings for Chattogram Board." />    <meta name="keywords" content="BoardRankCTG reviews, feedback, SSC HSC reviews, Chattogram Board reviews">    <meta name="author" content="Hasnyne" />    <meta name="robots" content="index, follow" />    <link rel="canonical" href="https://boradrankctg.github.io/rank/review.html" />      <!-- Open Graph -->    <meta property="og:title" content="Reviews — BoardRankCTG" />    <meta property="og:description" content="Share your experience with BoardRankCTG. Read and submit reviews." />    <meta property="og:url" content="https://boradrankctg.github.io/rank/review.html" />    <meta property="og:type" content="website" />      <!-- Fonts + Icons -->    <link rel="preconnect" href="https://fonts.googleapis.com" />    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800;900&display=swap" rel="stylesheet" />    <link rel="stylesheet" href="styles.css" />    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" crossorigin="anonymous" />    <link href="https://cdn.jsdelivr.net/npm/remixicon@4.3.0/fonts/remixicon.css" rel="stylesheet" />      <!-- Fav -->    <link rel="icon" href="https://cdn.jsdelivr.net/npm/remixicon@4.3.0/icons/trophy-line.svg" type="image/svg+xml" />  </head>  <body>      <!-- Top App Nav (same as index) -->    <nav class="app-nav" role="navigation">      <div class="nav-inner">        <a class="brand" href="index.html">🎓 BoardRankCTG</a>          <button class="nav-toggle" id="navToggle" aria-label="Toggle menu">          <i class="ri-menu-line"></i>        </button>          <ul class="nav-links" id="navLinks">          <li><a href="index.html"><i class="fas fa-house-chimney"></i> Home</a></li>          <li><a href="about.html"><i class="fas fa-user-tie"></i> About</a></li>          <li><a href="review.html"><i class="fas fa-star-half-stroke"></i> Reviews</a></li>          <li><a href="contactus.html"><i class="fas fa-envelope-open-text"></i> Contact</a></li>            <li><button id="helpBtn" class="linklike"><i class="fas fa-question-circle"></i> Help</button></li>          <li><button id="shareBtn" class="linklike"><i class="ri-share-line"></i> Share</button></li>          <li><a href="visitors.html" id="visitorsLink"><i class="fas fa-users"></i> Visitors</a></li>            <li class="divider"></li>          <li>            <label class="theme-switch" title="Toggle theme">              <input type="checkbox" id="themeToggle" />              <span class="slider" aria-hidden="true"></span>              <span class="label">Dark mode</span>            </label>          </li>        </ul>      </div>      <div class="nav-overlay" id="navOverlay"></div>    </nav>      <!-- Announcements (live from Firebase, same key as index) -->    <div id="annBanner" class="ann-banner type-info" style="display:none;">      <div class="ann-inner">        <div class="ann-text" id="annText"></div>        <a id="annBtn" class="ann-btn" href="#" target="_blank" rel="noopener" style="display:none;">Learn more</a>      </div>    </div>      <main class="container" style="padding-top: 16px;">      <h1 style="color:#111; margin:8px 0;">Reviews</h1>      <p class="info-banner">Tell us what you think. Your feedback helps improve the experience.</p>        <!-- Submit Review Card -->      <section class="popup-content" style="max-width: 700px; margin: 14px auto;">        <h2>Leave a Review</h2>          <input id="reviewName" type="text" placeholder="Your name…" />        <div id="nameError" class="error-message"></div>          <div id="starContainer" style="font-size: 1.5rem; color: gold; cursor: pointer; margin-top: 6px;">          <span onclick="rateSite(1)">☆</span>          <span onclick="rateSite(2)">☆</span>          <span onclick="rateSite(3)">☆</span>          <span onclick="rateSite(4)">☆</span>          <span onclick="rateSite(5)">☆</span>        </div>        <div id="starError" class="error-message"></div>          <textarea id="reviewText" rows="3" placeholder="Write your feedback…" style="margin-top:10px;"></textarea>        <div id="commentError" class="error-message"></div>          <button onclick="submitReview()" style="margin-top:10px;">Submit Review</button>      </section>        <!-- All Reviews -->      <section style="max-width: 900px; margin: 20px auto;">        <h3>All Reviews</h3>        <div id="reviewsContainer"></div>      </section>    </main>      <footer>      &copy; 2025 BoardRankCTG — Made by Hasnyne    </footer>      <!-- Ban overlay (same as index, enforced by script.js) -->    <div id="banOverlay">      <div class="ban-card">        <h3>🚫 Access Restricted</h3>        <p id="banReason">Reason: —</p>        <p id="banUntil">Until: —</p>        <div id="banTimer" style="font-weight:800;margin-top:6px;"></div>        <p style="margin-top:12px;font-size:.9rem;">If you think this is a mistake, contact the admin.</p>      </div>    </div>      <!-- Reviews logic (kept from your page) -->    <script type="module">        import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-app.js";        import {          getDatabase,          ref,          push,          set,          onValue,          runTransaction,          remove,        } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-database.js";                // === Firebase Config ===        const firebaseConfig = {          apiKey: "AIzaSyBaKVrTWKeaUxa0EaiDBR8OGpGCAjxAcUA",          authDomain: "boardrankctg.firebaseapp.com",          databaseURL: "https://boardrankctg-default-rtdb.asia-southeast1.firebasedatabase.app",          projectId: "boardrankctg",          storageBucket: "boardrankctg.firebasestorage.app",          messagingSenderId: "751761229963",          appId: "1:751761229963:web:43f9dbf71feef6dc9cec8e",          measurementId: "G-3Y6J44NWNH",        };                // === Init Firebase ===        const app = initializeApp(firebaseConfig);        const db = getDatabase(app);                // === User ===        let userId = localStorage.getItem("userId");        if (!userId) {          userId = crypto.randomUUID();          localStorage.setItem("userId", userId);        }        const ADMIN_ID = "admin1234";                // === Star Rating ===        function rateSite(rating) {          const stars = document.getElementById("starContainer").children;          for (let i = 0; i < stars.length; i++) {            stars[i].textContent = i < rating ? "★" : "☆";          }          localStorage.setItem("userRating", rating);        }        window.rateSite = rateSite;                // === Submit Review ===        async function submitReview() {          const nameField = document.getElementById("reviewName");          const textField = document.getElementById("reviewText");          const name = nameField.value.trim();const comment = textField.value.trim();          const rating = parseInt(localStorage.getItem("userRating") || 0);                  if (!name || !comment || rating === 0) {            alert("Please fill in all fields and select a rating.");            return;          }                  const newReviewRef = push(ref(db, "reviews"));          await set(newReviewRef, {            name,            comment,            rating,            likes: 0,            replies: {},            timestamp: Date.now(),            userId: userId,          });          nameField.value = "";textField.value = "";          rateSite(0);          localStorage.removeItem("userRating");        }        window.submitReview = submitReview;                // === Submit Reply (now with isAdmin flag) ===        window.submitReply = async function (id) {  const input = document.getElementById(`reply-${id}`);  const text = (input.value || '').trim();  if (!text) return;  const replyRef = push(ref(db, `reviews/${id}/replies`));  await set(replyRef, {    text,    isAdmin: userId === ADMIN_ID,    userId: userId,    likes: 0,    timestamp: Date.now()  });  input.value = '';};                // === Delete Review ===        window.deleteReview = async function (id) {          if (confirm("Are you sure you want to delete this review?")) {            await remove(ref(db, `reviews/${id}`));          }        };                // === Delete Reply ===        window.deleteReply = async function (reviewId, replyId) {          if (confirm("Delete this reply?")) {            await remove(ref(db, `reviews/${reviewId}/replies/${replyId}`));          }        };        window.likeReply = function (reviewId, replyId) {  const key = 'replyLike_' + reviewId + '_' + replyId;  if (localStorage.getItem(key) === '1') return;  localStorage.setItem(key, '1');  runTransaction(ref(db, `reviews/${reviewId}/replies/${replyId}/likes`), v => (v || 0) + 1);};        // === Load Reviews (with ADMIN badge on replies) ===        function loadReviews() {          const container = document.getElementById("reviewsContainer");          const reviewsRef = ref(db, "reviews");                  onValue(reviewsRef, (snapshot) => {            container.innerHTML = "";            const data = snapshot.val();            if (!data) return;                    Object.entries(data)              .reverse()              .forEach(([id, review]) => {                const isOwner = review.userId === userId || userId === ADMIN_ID;                const replies = review.replies  ? Object.entries(review.replies)      .map(([rid, r]) => {        const adminTag = r.isAdmin ? `<span class="badge-admin">[ADMIN]</span>` : "";        const canDelete = (r.userId && (r.userId === userId || userId === ADMIN_ID));        const likeCount = r.likes || 0;        return `          <div class="reply-box">↪️ ${adminTag} ${r.text}            <span class="reply-actions" style="margin-left:8px;">              <button class="reply-like-btn" onclick="likeReply('${id}','${rid}')">👍</button>              <span class="reply-like-count" style="font-weight:800;">${likeCount}</span>              ${canDelete ? `<button class="reply-del-btn" onclick="deleteReply('${id}','${rid}')">🗑️</button>` : ``}            </span>          </div>        `;      })      .join("")  : "";                        container.innerHTML += `                  <div class="review-box">                    <div>                      <strong>${review.name || "Anonymous"}</strong>                      <small style="color: gray; margin-left: 10px;">${new Date(                        review.timestamp                      ).toLocaleString()}</small>                      <div>⭐ ${review.rating || "No rating"}</div>                    </div>                    <div class="review-comment">${review.comment}</div>                    <div>                      <button onclick="voteReview('${id}', 'like')">👍 ${review.likes || 0}</button>                      <button onclick="voteReview('${id}', 'dislike')">👎 ${review.dislikes || 0}</button>                      <input type="text" placeholder="Reply..." id="reply-${id}" style="width: 80%;" />                      <button onclick="submitReply('${id}')">Reply</button>                      ${isOwner ? `<button onclick="deleteReview('${id}')">🗑️ Delete</button>` : ""}                    </div>                    ${replies}                  </div>                `;              });          });        }        window.loadReviews = loadReviews;                // === Like/Dislike ===        window.voteReview = function (id, type) {          const key = "reviewVote_" + id;          const prev = localStorage.getItem(key);          if (prev === type) return;                  const path = `reviews/${id}/${type === "like" ? "likes" : "dislikes"}`;          runTransaction(ref(db, path), (v) => (v || 0) + 1);                  if (prev && prev !== type) {            const undo = `reviews/${id}/${prev === "like" ? "likes" : "dislikes"}`;            runTransaction(ref(db, undo), (v) => Math.max(0, (v || 0) - 1));          }                  localStorage.setItem(key, type);        };                // === Visit Counter ===        function updateVisitStats() {          const totalRef = ref(db, "siteStats/totalVisits");          const userRef = ref(db, "siteStats/activeUsers/" + userId);          runTransaction(totalRef, (n) => (n || 0) + 1);          set(userRef, Date.now());        }                // === On Load ===        document.addEventListener("DOMContentLoaded", () => {          loadReviews();          updateVisitStats();        });        </script>                <style>        .badge-admin {          color: #fff;          background: #d00;          padding: 2px 6px;          border-radius: 4px;          font-size: 12px;          margin-right: 5px;        }        .reply-actions{display:inline-flex;gap:8px;align-items:center;}.reply-like-btn,.reply-del-btn{padding:2px 8px;border-radius:6px;border:1px solid #e5e7eb;background:#fff;cursor:pointer;font-weight:800;}.reply-like-btn:hover{background:#f3f4f6;}.reply-del-btn{color:#b91c1c;}.reply-del-btn:hover{background:#fee2e2;}        </style>            <!-- Site-wide script (theme, nav, help/share popups, announcements, bot, etc.) -->    <script src="script.js"></script>  </body>  </html>
