--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <title>SSC & HSC Board Rank — Chittagong Board (Unofficial)</title>
+<meta name="google-adsense-account" content="ca-pub-7749577490236390">
 <meta name="description" content="View unofficial SSC & HSC rankings for Chattogram/Chittagong Board with marks list. Fast, easy, with GPA, total marks, and school comparisons.">
 <meta name="keywords" content="SSC 2025, SSC Result 2025, Board Rank, Chittagong Board Rank, Bangladesh SSC Rank, SSC 2025 Rank, HSC 2024 Result, SSC 2024 Result, Board-wise Rank, CTG Board Result, GPA Rank Bangladesh">
 <meta name="author" content="Hasnyne" />
