--- a/index.html
+++ b/index.html
@@ -1,12 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7749577490236390"
-     crossorigin="anonymous"></script>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <title>SSC & HSC Board Rank — Chittagong Board (Unofficial)</title>
-<meta name="google-adsense-account" content="ca-pub-7749577490236390">
 <meta name="description" content="View unofficial SSC & HSC rankings for Chattogram/Chittagong Board with marks list. Fast, easy, with GPA, total marks, and school comparisons.">
 <meta name="keywords" content="SSC 2025, SSC Result 2025, Board Rank, Chittagong Board Rank, Bangladesh SSC Rank, SSC 2025 Rank, HSC 2024 Result, SSC 2024 Result, Board-wise Rank, CTG Board Result, GPA Rank Bangladesh">
 <meta name="author" content="Hasnyne" />
@@ -90,7 +87,20 @@
 </div>
 <div class="nav-overlay" id="navOverlay"></div>
 </nav>
-
+<!-- INSERT ADS HERE -->
+<!-- AD BLOCK 1 -->
+<div style="text-align:center; margin:20px 0;">
+<script type="text/javascript">
+	atOptions = {
+		'key' : 'b6547c47c5251d6ddf897101ab29a8b5',
+		'format' : 'iframe',
+		'height' : 50,
+		'width' : 320,
+		'params' : {}
+	};
+</script>
+<script type="text/javascript" src="https://www.highperformanceformat.com/b6547c47c5251d6ddf897101ab29a8b5/invoke.js"></script>
+</div>
 <div id="customBanner" class="info-banner">⚠️ This is not an official rank. It's prepared based on publicly available data.</div>
 <div id="annBanner" class="ann-banner type-info" style="display:none;">
 <div class="ann-inner">
@@ -169,6 +179,24 @@
 <div class="year-line">23</div>
 </div>
 </div>
+
+
+
+
+<!-- AD BLOCK 2 -->
+<div id="container-a18c15a8b5eced98b921013320da3182" style="text-align:center; margin:20px 0;"></div>
+<script async="async" data-cfasync="false" src="https://pl28076253.effectivegatecpm.com/a18c15a8b5eced98b921013320da3182/invoke.js"></script>
+
+<!-- AD BLOCK 3 -->
+<div style="text-align:center; margin:20px 0;">
+<script type='text/javascript' src='https://pl28076405.effectivegatecpm.com/ef/64/80/ef64806886906380891e0ba17d72a92b.js'></script>
+</div>
+
+<p>Please don't click here(very secret stuffs)
+  <a href="https://www.effectivegatecpm.com/yqz9zj86?key=62b658a73a67a02c053bc9abbb3ce877" target="_blank" rel="noopener noreferrer">Click here</a>
+</p>
+
+
 
 <section id="seo-blurb">
 <div class="seo-container">
