--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 </section>
 
 <div class="featured-box" data-value="hsc_2025" onclick="handleFeaturedClick('hsc_2025', this)">
-<div class="new-ribbon">New</div>
+<div class="new-ribbon"><span style="left: -14px; position: relative;">RECHECK</span></div>
 <div class="featured-text">
 <div class="ssc-line">HSC</div>
 <div class="year-line">25</div>
