--- a/index.html
+++ b/index.html
@@ -84,7 +84,9 @@
 </label>
 </li>
 </ul>
-
+</div>
+<div class="nav-overlay" id="navOverlay"></div>
+</nav>
 <!-- INSERT ADS HERE -->
 <!-- AD BLOCK 1 -->
 <div style="text-align:center; margin:20px 0;">
