--- a/contactus.html
+++ b/contactus.html
@@ -43,10 +43,16 @@
         <li><a href="about.html"><i class="fas fa-user-tie"></i> About</a></li>
         <li><a href="review.html"><i class="fas fa-star-half-stroke"></i> Reviews</a></li>
         <li><a href="contactus.html"><i class="fas fa-envelope-open-text"></i> Contact</a></li>
+
+        <li class="logged-in-only" style="display:none;"><a href="profile.html"><i class="fas fa-user"></i> Profile</a></li>
+        <li class="logged-in-only" style="display:none;"><a href="favorite.html"><i class="fas fa-heart"></i> Favorites</a></li>
+        <li class="logged-out-only"><a href="login.html"><i class="fas fa-sign-in-alt"></i> Login</a></li>
+        <li class="logged-in-only" style="display:none;"><button class="linklike" onclick="doLogout()"><i class="fas fa-sign-out-alt"></i> Logout</button></li>
+
         <li><button id="helpBtn" class="linklike"><i class="fas fa-question-circle"></i> Help</button></li>
         <li><button id="shareBtn" class="linklike"><i class="ri-share-line"></i> Share</button></li>
         <li><a href="visitors.html" id="visitorsLink"><i class="fas fa-users"></i> Visitors</a></li>
-        
+
         <li class="divider"></li>
         <li>
           <label class="theme-switch" title="Toggle theme">
@@ -59,6 +65,7 @@
     </div>
     <div class="nav-overlay" id="navOverlay"></div>
   </nav>
+
 
   <!-- Announcements (from Firebase) -->
   <div id="annBanner" class="ann-banner type-info" style="display:none;">
