--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE html> 
 <html lang="en">
 <head>
 <meta charset="UTF-8" />
@@ -72,10 +72,13 @@
 <li><a href="about.html"><i class="fas fa-user-tie"></i> About</a></li>
 <li><a href="review.html"><i class="fas fa-star-half-stroke"></i> Reviews</a></li>
 <li><a href="contactus.html"><i class="fas fa-envelope-open-text"></i> Contact</a></li>
+<li class="logged-in-only" style="display:none;"><a href="profile.html"><i class="fas fa-user"></i> Profile</a></li>
+<li class="logged-in-only" style="display:none;"><a href="favorite.html"><i class="fas fa-heart"></i> Favorites</a></li>
+<li class="logged-out-only"><a href="login.html"><i class="fas fa-sign-in-alt"></i> Login</a></li>
+<li class="logged-in-only" style="display:none;"><button class="linklike" onclick="doLogout()"><i class="fas fa-sign-out-alt"></i> Logout</button></li>
 <li><button id="helpBtn" class="linklike"><i class="fas fa-question-circle"></i> Help</button></li>
 <li><button id="shareBtn" class="linklike"><i class="ri-share-line"></i> Share</button></li>
 <li><a href="visitors.html" id="visitorsLink"><i class="fas fa-users"></i> Visitors</a></li>
-<li class="divider"></li>
 <li>
 <label class="theme-switch">
 <input type="checkbox" id="themeToggle" />
@@ -87,21 +90,27 @@
 </div>
 <div class="nav-overlay" id="navOverlay"></div>
 </nav>
-<!-- INSERT ADS HERE -->
 <!-- AD BLOCK 1 -->
 <div style="text-align:center; margin:20px 0;">
-<script type="text/javascript">
-	atOptions = {
-		'key' : 'b6547c47c5251d6ddf897101ab29a8b5',
-		'format' : 'iframe',
-		'height' : 50,
-		'width' : 320,
-		'params' : {}
-	};
-</script>
-<script type="text/javascript" src="https://www.highperformanceformat.com/b6547c47c5251d6ddf897101ab29a8b5/invoke.js"></script>
-</div>
+  <script type="text/javascript">
+    atOptions = {
+      'key' : 'b6547c47c5251d6ddf897101ab29a8b5',
+      'format' : 'iframe',
+      'height' : 50,
+      'width' : 320,
+      'params' : {}
+    };
+  </script>
+  <script type="text/javascript" src="https://www.highperformanceformat.com/b6547c47c5251d6ddf897101ab29a8b5/invoke.js"></script>
+  </div>
+
 <div id="customBanner" class="info-banner">⚠️ This is not an official rank. It's prepared based on publicly available data.</div>
+<div id="annBanner" class="ann-banner type-info" style="display:none;">
+<div class="ann-inner">
+<div class="ann-text" id="annText"></div>
+<a id="annBtn" class="ann-btn" href="#" target="_blank" rel="noopener" style="display:none;">Learn more</a>
+</div>
+</div>
 
 <main>
 <section>
@@ -176,7 +185,6 @@
 
 
 
-
 <!-- AD BLOCK 2 -->
 <div id="container-a18c15a8b5eced98b921013320da3182" style="text-align:center; margin:20px 0;"></div>
 <script async="async" data-cfasync="false" src="https://pl28076253.effectivegatecpm.com/a18c15a8b5eced98b921013320da3182/invoke.js"></script>
@@ -185,10 +193,6 @@
 <div style="text-align:center; margin:20px 0;">
 <script type='text/javascript' src='https://pl28076405.effectivegatecpm.com/ef/64/80/ef64806886906380891e0ba17d72a92b.js'></script>
 </div>
-
-
-
-
 
 <section id="seo-blurb">
 <div class="seo-container">
@@ -226,12 +230,12 @@
 <img src="asset/arrow-up.png" alt="Scroll to top">
 </button>
 
-  <script src="scripts/1-core.js" defer></script>
-  <script src="scripts/2-data-table.js" defer></script>
-  <script src="scripts/3A-popups-core.js" defer></script>
-  <script src="scripts/3B-popups-verify-share.js" defer></script>
-  <script src="scripts/4-routing-data-ui.js" defer></script>
-  <script type="module" src="scripts/app.js"></script>
+<script src="scripts/1-core.js" defer></script>
+<script src="scripts/2-data-table.js" defer></script>
+<script src="scripts/3A-popups-core.js" defer></script>
+<script src="scripts/3B-popups-verify-share.js" defer></script>
+<script src="scripts/4-routing-data-ui.js" defer></script>
+<script type="module" src="scripts/app.js"></script>
 
 <footer>&copy; 2025 BoardRankCTG — Made by Hasnyne</footer>
 
