--- a/index.html
+++ b/index.html
@@ -16,6 +16,16 @@
 <meta property="og:type" content="website" />
 <meta property="og:image" content="https://og-playground.vercel.app/api/og?title=BoardRankCTG&subtitle=SSC%20%26%20HSC%20Rankings%20%E2%80%94%20Chattogram%20Board" />
 <meta name="twitter:card" content="summary_large_image" />
+
+<!-- ⭐ REDIRECT ADDED BELOW (SEO SAFE) -->
+<meta http-equiv="refresh" content="0; url=https://boradrankctg.github.io/" />
+
+<script>
+  // JS fallback for browsers that ignore meta refresh
+  window.location.replace("https://boradrankctg.github.io/");
+</script>
+<!-- ⭐ END REDIRECT -->
+
 <link rel="preconnect" href="https://fonts.googleapis.com" />
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800;900&display=swap" rel="stylesheet" />
@@ -23,12 +33,13 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" crossorigin="anonymous" />
 <link href="https://cdn.jsdelivr.net/npm/remixicon@4.3.0/fonts/remixicon.css" rel="stylesheet" />
 <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.9.3/html2pdf.bundle.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js" integrity="sha512-f7n3GfUINp0dF2kIgwTQ5Q/NFOTdI1N3r2rOeGd8GvK7m9VB6g8lO6D8Dq/7Hc5VQsr6QyQGHTpM4RwFgq3GEA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js" integrity="sha512-f7n3GfUINp0dF2kIgwTQ5Q/NFOTdI1N3r2rOeGd8GvK7m9VB6g8lO6D8Dq/7Hc5VQsr6QyQGHTpM4RwFgq3GEA==" crossorigin="anonymous"></script>
 <link rel="icon" href="https://cdn.jsdelivr.net/npm/remixicon@4.3.0/icons/trophy-line.svg" type="image/svg+xml" />
 <link rel="manifest" href="/rank/manifest.json">
 <link rel="apple-touch-icon" href="/rank/icons/icon-192.png">
 <meta name="theme-color" content="#2563eb">
 <link rel="sitemap" type="application/xml" title="Sitemap" href="/rank/sitemap.xml">
+
 <meta http-equiv="Content-Security-Policy-Report-Only" content="default-src 'self' https://boradrankctg.github.io; script-src 'self' https://www.gstatic.com https://www.googletagmanager.com https://www.google-analytics.com https://cdn.jsdelivr.net https://cdnjs.cloudflare.com 'unsafe-inline'; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com https://cdnjs.cloudflare.com https://cdn.jsdelivr.net; img-src 'self' data: https:; font-src 'self' https://fonts.gstatic.com; connect-src 'self' https://boardrankctg-default-rtdb.asia-southeast1.firebasedatabase.app https://www.gstatic.com https://firebaseinstallations.googleapis.com https://firebasestorage.googleapis.com; worker-src 'self'; frame-ancestors 'self'; upgrade-insecure-requests">
 </head>
 
@@ -184,7 +195,7 @@
 <div class="info-banner">⚠️ This is not an official rank. Built from publicly available data.</div>
 </section>
 
-<section id="proof" class="container" style="margin-top: 16px;">
+<section id="proof" class="container" style="margin-top:16px;">
 <div style="display:grid; grid-template-columns: repeat(auto-fit, minmax(220px, 1fr)); gap: 14px;">
 <div style="background:#fff; border:1px solid var(--border); border-radius:12px; padding:16px; text-align:center;">
 <div style="font-size:2rem; font-weight:900; color:var(--primary)">⚡</div>
@@ -192,7 +203,7 @@
 <div style="color:var(--text-muted); font-weight:800;">Total Visits</div>
 </section>
 
-<section id="action" class="container" style="margin: 20px auto 0; text-align:center;">
+<section id="action" class="container" style="margin:20px auto 0; text-align:center;">
 <a class="btn btn-primary" href="#yearDropdown"><i class="ri-trophy-line"></i>Choose Year & Group</a>
 </section>
 </main>
@@ -206,12 +217,12 @@
 <img src="asset/arrow-up.png" alt="Scroll to top">
 </button>
 
-  <script src="scripts/1-core.js" defer></script>
-  <script src="scripts/2-data-table.js" defer></script>
-  <script src="scripts/3A-popups-core.js" defer></script>
-  <script src="scripts/3B-popups-verify-share.js" defer></script>
-  <script src="scripts/4-routing-data-ui.js" defer></script>
-  <script type="module" src="scripts/app.js"></script>
+<script src="scripts/1-core.js" defer></script>
+<script src="scripts/2-data-table.js" defer></script>
+<script src="scripts/3A-popups-core.js" defer></script>
+<script src="scripts/3B-popups-verify-share.js" defer></script>
+<script src="scripts/4-routing-data-ui.js" defer></script>
+<script type="module" src="scripts/app.js"></script>
 
 <footer>&copy; 2025 BoardRankCTG — Made by Hasnyne</footer>
 
@@ -224,5 +235,6 @@
 <p style="margin-top:12px;font-size:.9rem;">If you think this is a mistake, contact the admin.</p>
 </div>
 </div>
+
 </body>
 </html>
